Closed Bug 1764451 Opened 2 years ago Closed 2 years ago

non262/Record/cross-realm.js test fails with --args=--more-compartments

Categories

(Core :: JavaScript Engine, defect, P1)

Firefox 101
defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
firefox101 --- wontfix
firefox102 --- wontfix
firefox103 --- fixed

People

(Reporter: tjc, Assigned: tjc)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1763874 +++

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.93 Safari/537.36

Steps to reproduce:

mach jstests Record/cross-realm --args=--more-compartments

Actual results:

## non262/Record/cross-realm.js: rc = -11, run time = 0.380883
Assertion failure: vp.isObject(), at /home/tjc/gecko-fork/js/src/vm/Compartment-inl.h:69
#01: JS::Compartment::wrap(JSContext*, JS::MutableHandle<JS::Value>)[/home/tjc/gecko-fork/obj-x64-debug/dist/bin/js +0x1b32596]
#02: js::CrossCompartmentWrapper::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const[/home/tjc/gecko-fork/obj-x64-debug/dist/bin/js +0x1e1e4be]
#03: ???[/home/tjc/gecko-fork/obj-x64-debug/dist/bin/js +0x1e257eb]

Expected results:

The test should pass. I have a patch coming shortly.

Assignee: nobody → tjc
Attachment #9272030 - Attachment description: WIP: Bug 1764451 - Handle ExtendedPrimitives properly in JS::Compartment::wrap() → Bug 1764451 - Handle ExtendedPrimitives properly in JS::Compartment::wrap() r=jandem
Status: NEW → ASSIGNED
Blocks: 1765477

Ready to land D143551 -- try build at https://treeherder.mozilla.org/jobs?repo=try&revision=422af228fb0bf376d31db6d0fa24f51d123fe462 (it shows one test failure, but that seems spurious as the test passed when re-launched, there is a similar known issue (bug 1719221), and it seems unrelated to this change).

Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2aaff54387ee
Handle ExtendedPrimitives properly in JS::Compartment::wrap() r=jandem
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: