Bug 1764451 - Handle ExtendedPrimitives properly in JS::Compartment::wrap() r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D143551